fix: only serve wiki on metakgp.org and wiki.metakgp.org

--- a/nginx/wiki.metaploy.conf
+++ b/nginx/wiki.metaploy.conf
@@ -4,9 +4,7 @@ upstream metawiki_server {
 
 # Wiki configuration
 server {
-	server_name wiki.metakgp.org;
-
-	listen 80 default_server;
+	server_name wiki.metakgp.org metakgp.org;
 
 	index index.php index.html;
 	autoindex off;
