fix backup script

--- a/.env.template
+++ b/.env.template
@@ -16,8 +16,11 @@ GOOGLE_ANALYTICS_SERVICE_KEY=
 WG_SECRET_KEY=
 # Password for making upgrades from the web interface. https://www.mediawiki.org/wiki/Manual:$wgUpgradeKey
 SITE_UPGRADE_KEY=
-# Dropbox account used for storing backups
+# Dropbox api variables(used for storing backups)
+DROPBOX_APP_KEY=     
+DROPBOX_APP_SECRET=
 DROPBOX_ACCESS_TOKEN=
+DROPBOX_REFRESH_TOKEN=
 # URL to the Slack webhook used to send updates
 SLACK_WEBHOOK_URL=
 # A generated password of the Batman bot user account on the wiki.
