feat: better backup functionalities

--- a/.env.template
+++ b/.env.template
@@ -22,6 +22,7 @@ DROPBOX_APP_SECRET=
 DROPBOX_ACCESS_TOKEN=
 DROPBOX_REFRESH_TOKEN=
 # URL to the Slack webhook used to send updates
-SLACK_WEBHOOK_URL=
+SLACK_CHANGES_WH_URL=
+SLACK_INCIDENTS_WH_URL
 # A generated password of the Batman bot user account on the wiki.
 BATMAN_BOT_PASSWORD=
