--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - SITE_UPGRADE_KEY=$SITE_UPGRADE_KEY
       - MYSQL_PASSWORD=$MYSQL_PASSWORD
       - SERVER_NAME=$SERVER_NAME
-      - SLACK_WEBHOOK_URL=$SLACK_WEBHOOK_URL
+      - SLACK_CHANGES_WH_URL=$SLACK_CHANGES_WH_URL
       - DEV=$DEV
 
   nginx:
