[jobs]Feat: mysql log rotation
Signed-off-by: Shikhar Soni <shikharish05@gmail.com>

--- a/mysql/mysqld.cnf
+++ b/mysql/mysqld.cnf
@@ -1,5 +1,6 @@
 [mysqld]
-general_log=1
+general_log=1   
+general_log_file = /var/lib/mysql/mysql.log
 
 # Slow query settings:
 slow_query_log=1
@@ -8,3 +9,5 @@ long_query_time=5.0
 
 # Error logging
 log_error=/var/lib/mysql/mysql_error.log
+
+innodb_temp_data_file_path=ibtmp1:12M:autoextend:max:5G
