--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,3 +24,4 @@ services:
       - GOOGLE_ANALYTICS_SERVICE_KEY=$GOOGLE_ANALYTICS_SERVICE_KEY
     volumes:
       - mediawiki-volume:/srv/mediawiki
+      - db-volume:/var/lib/mysql
