--- a/jobs/Dockerfile
+++ b/jobs/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3-slim
 
-RUN apt-get update && apt-get install -y wget curl logrotate
+RUN apt-get update && apt-get install -y wget curl logrotate default-mysql-client
 
 ENV TZ=Asia/Kolkata
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
