--- a/.env.template
+++ b/.env.template
@@ -6,7 +6,9 @@ MYSQL_PASSWORD=
 SERVER_PORT=8080
 # The base URL of the wiki. https://www.mediawiki.org/wiki/Manual:$wgServer
 SERVER_NAME=http://localhost:8080
-# Mailgun SMTP password for sending official mails from the wiki. See https://help.mailgun.com/hc/en-us/articles/203380100-Where-Can-I-Find-My-API-Key-and-SMTP-Credentials-
+# The email ID used for sending emails via mailgun (eg: admin@wiki.metakgp.org)
+MAILGUN_EMAIL=
+# Mailgun SMTP password for sending official mails from the wiki. See https://help.mailgun.com/hc/en-us/articles/203380100-Where-Can-I-Find-My-API-Key-and-SMTP-Credentials
 MAILGUN_PASSWORD=
 # Google Analytics Account (GA-XXXXXX or UA-XXXXXX)
 GOOGLE_ANALYTICS_ACCOUNT=
@@ -17,7 +19,7 @@ WG_SECRET_KEY=
 # Password for making upgrades from the web interface. https://www.mediawiki.org/wiki/Manual:$wgUpgradeKey
 SITE_UPGRADE_KEY=
 # Dropbox api variables(used for storing backups)
-DROPBOX_APP_KEY=     
+DROPBOX_APP_KEY=
 DROPBOX_APP_SECRET=
 DROPBOX_ACCESS_TOKEN=
 DROPBOX_REFRESH_TOKEN=
