docs: added batman bot documentation

--- a/.env.template
+++ b/.env.template
@@ -26,6 +26,6 @@ DROPBOX_REFRESH_TOKEN=
 # URL to the Slack webhook used to send updates about wiki changes
 SLACK_CHANGES_WH_URL=
 # URL to the Slack webhook used to send incidents reports and errors(like Dropbox backup failure).
-SLACK_INCIDENTS_WH_URL
+SLACK_INCIDENTS_WH_URL=
 # A generated password of the Batman bot user account on the wiki.
 BATMAN_BOT_PASSWORD=
