feat: trigger based on paths relevant for deployment

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,6 +4,13 @@ on:
     push:
         branches:
             - "master"
+        paths:
+            - "jobs/**"
+            - "mediawiki/**"
+            - "mysql/**"
+            - "nginx/**"
+            - "docker-compose.prod.yml"
+            - "docker-compose.yml"
 
 jobs:
     pull:
