--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,6 +5,7 @@ on:
         branches:
             - "master"
         paths:
+            - ".github/workflows/deploy.yaml"
             - "jobs/**"
             - "mediawiki/**"
             - "mysql/**"
