--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -5,6 +5,7 @@ on:
         branches:
             - "master"
         paths:
+            - ".github/workflows/sync.yaml"
             - "scripts/**"
 
 jobs:
