--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -5,27 +5,27 @@ on:
         branches:
             - "master"
         paths:
-            - ".github/workflows/sync.yaml"
             - "scripts/**"
+            - ".github/workflows/sync.yaml"
 
 jobs:
-    pull:
-        name: Pull Stage
+    push:
+        name: Push Stage
         runs-on: ubuntu-latest
 
         steps:
-            - name: Sync with remote repository
+            - name: Sync local repo with remote repo
               uses: appleboy/ssh-action@master
               env:
-                  WIKI_DIR: ${{ secrets.WIKI_DIR }}
+                  PROJECT_DIR: ${{ secrets.PROJECT_DIR }}
               with:
-                  host: ${{ secrets.HOSTNAME }}
-                  username: ${{ secrets.USERNAME }}
+                  host: ${{ secrets.SSH_HOSTNAME }}
+                  username: ${{ secrets.SSH_USERNAME }}
                   key: ${{ secrets.SSH_PRIVATE_KEY }}
-                  passphrase: ${{ secrets.PASSPHRASE }}
-                  envs: WIKI_DIR
+                  passphrase: ${{ secrets.SSH_PRIVATE_KEY_PASSPHRASE }}
+                  envs: PROJECT_DIR
                   script_stop: true
                   script: |
-                      cd "${WIKI_DIR}/"
+                      cd "${PROJECT_DIR}/"
                       sudo git fetch origin
                       sudo git reset --hard origin/master
