feat: manual workflow trigger

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,7 @@ on:
             - "docker-compose.prod.yml"
             - "docker-compose.yml"
             - ".github/workflows/deploy.yaml"
+    workflow_dispatch: # This allows us to trigger the workflow manually
 
 jobs:
     push:
