--- a/nginx/wiki.metaploy.conf
+++ b/nginx/wiki.metaploy.conf
@@ -15,6 +15,10 @@ server {
     }
 
 	# Cloudflare masks real IPs
+  ## We are using cloudflare for DNS management
+  ## Cloudflare masks the real ip of the user with its ips
+  ## Here we are specifying cloudflare to provide with the user's actual ip 
+  ## via sending a special header.
 	set_real_ip_from 199.27.128.0/21;
 	set_real_ip_from 173.245.48.0/20;
 	set_real_ip_from 103.21.244.0/22;
@@ -29,6 +33,7 @@ server {
 	set_real_ip_from 162.158.0.0/15;
 	set_real_ip_from 104.16.0.0/12;
 	set_real_ip_from 172.64.0.0/13;
+  set_real_ip_from 172.19.0.0/13;
 	set_real_ip_from 2400:cb00::/32;
 	set_real_ip_from 2606:4700::/32;
 	set_real_ip_from 2803:f800::/32;
