--- a/nginx/wiki.metaploy.conf
+++ b/nginx/wiki.metaploy.conf
@@ -9,17 +9,23 @@ server {
 	index index.php index.html;
 	autoindex off;
 
-
 	location / {
-        proxy_pass http://metawiki_server;
-    }
+		proxy_pass http://metawiki_server;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-Host $host;
+		proxy_set_header X-Forwarded-Server $host;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	}
 
-	# Cloudflare masks real IPs
-  ## We are using cloudflare for DNS management
-  ## Cloudflare masks the real ip of the user with its ips
-  ## Here we are specifying cloudflare to provide with the user's actual ip 
-  ## via sending a special header.
-	set_real_ip_from 199.27.128.0/21;
+	###################### Cloudflare masks real IPs #########################
+	# We are using cloudflare for DNS management							 #
+	# Cloudflare masks the real ip of the user with its ips			 		 #
+	# Here we are specifying cloudflare to provide with the user's actual ip #
+	# via sending a special header.											 #
+	##########################################################################
+
+	# IPv4
 	set_real_ip_from 173.245.48.0/20;
 	set_real_ip_from 103.21.244.0/22;
 	set_real_ip_from 103.22.200.0/22;
@@ -31,14 +37,20 @@ server {
 	set_real_ip_from 197.234.240.0/22;
 	set_real_ip_from 198.41.128.0/17;
 	set_real_ip_from 162.158.0.0/15;
-	set_real_ip_from 104.16.0.0/12;
+	set_real_ip_from 104.16.0.0/13;
+	set_real_ip_from 104.24.0.0/14;
 	set_real_ip_from 172.64.0.0/13;
-  set_real_ip_from 172.19.0.0/13;
+	set_real_ip_from 131.0.72.0/22;
+	set_real_ip_from 172.19.0.0/16;
+	
+	# IPv6
 	set_real_ip_from 2400:cb00::/32;
 	set_real_ip_from 2606:4700::/32;
 	set_real_ip_from 2803:f800::/32;
 	set_real_ip_from 2405:b500::/32;
 	set_real_ip_from 2405:8100::/32;
-	set_real_ip_from 127.0.0.1/32;
+	set_real_ip_from 2a06:98c0::/29;
+	set_real_ip_from 2c0f:f248::/32;
+	
 	real_ip_header CF-Connecting-IP;
 }
