--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,8 +5,11 @@ pid /run/nginx.pid;
 events {}
 
 http {
+	# Get original IP address of the user
+	real_ip_header X-Real-IP;
+	set_real_ip_from 0.0.0.0/0;
+
 	include /etc/nginx/mime.types;
-	include /etc/nginx/conf.d/*.conf;
 
 	server {
 		listen 80 default_server;
