--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -8,7 +8,7 @@ COPY nginx.conf /etc/nginx/
 RUN rm /etc/nginx/conf.d/default.conf
 
 # Run a postinstall script that configures metaploy
-COPY wiki.metaploy.conf /etc/nginx/sites-enabled/
+COPY wiki.metaploy.conf /
 COPY postinstall.sh /
 
 CMD ["/postinstall.sh", "nginx", "-g", "daemon off;"]
