feat: remove metakgp.org domain from the wiki

--- a/nginx/wiki.metaploy.conf
+++ b/nginx/wiki.metaploy.conf
@@ -4,7 +4,7 @@ upstream metawiki_server {
 
 # Wiki configuration
 server {
-    server_name wiki.metakgp.org metakgp.org;
+    server_name wiki.metakgp.org;
 
     index index.php index.html;
     autoindex off;
