feat: i sure hope it works this time

--- a/.env.template
+++ b/.env.template
@@ -29,3 +29,7 @@ SLACK_CHANGES_WH_URL=
 SLACK_INCIDENTS_WH_URL=
 # A generated password of the Batman bot user account on the wiki.
 BATMAN_BOT_PASSWORD=
+
+# A CIDR notation range of IP addresses to explicitly unblock from spam filters
+# Currently only supports a single range (eg: 127.0.0.0/24)
+ALLOW_IP_RANGE=
