--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - MYSQL_PASSWORD=$MYSQL_PASSWORD
       - SERVER_NAME=$SERVER_NAME
       - SLACK_CHANGES_WH_URL=$SLACK_CHANGES_WH_URL
+      - ALLOW_IP_RANGE=$ALLOW_IP_RANGE
       - DEV=$DEV
 
   nginx:
